--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <button onclick="rotateSelectedPortal('left')">⟲ Rotate Left</button>
     <button onclick="rotateSelectedPortal('right')">⟳ Rotate Right</button>
     <button onclick="toggleDeathTouch()" id="deathToggle">Death Touch: Off</button>
+    <button onclick="window.location.href='dev.html'">Dev</button>
     <div id="scoreboard">
       <p>Spawned: <span id="stat-spawned">0</span></p>
       <p>Born: <span id="stat-split">0</span></p>
