--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Ublec01d</title>
-  <style>
+    <style>
     html,body{margin:0;padding:0;overflow:hidden;background:#000;color:#fff;font-family:"Segoe UI",sans-serif}
     canvas{display:block}
-    #ui{position:absolute;top:10px;left:10px;background:rgba(0,0,0,.5);padding:10px;border-radius:10px}
-    #ui button{background:transparent;border:none;color:grey;font-family:"Courier New",monospace;font-size:1.1em;font-weight:bold;padding:4px 10px;margin:3px 0;cursor:pointer;transition:background .2s,color .2s}
+    #ui {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: transparent; /* fully transparent */
+      padding: 10px;
+      border-radius: 10px;
+      pointer-events: none; /* clicks go through */
+    }
+    #ui button {
+      background: transparent;
+      border: none;
+      color: grey;
+      font-family: "Courier New", monospace;
+      font-size: 1.1em;
+      font-weight: bold;
+      text-shadow: 0 0 3px #000;
+      padding: 4px 10px;
+      margin: 3px 0;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+      pointer-events: auto; /* ✅ restore clickability */
+    }
     #ui button:hover{background:lime;color:#000;border-radius:4px}
-    #scoreboard{font-family:monospace;font-size:17px;margin-top:8px}
+    #scoreboard{font-family:monospace;font-size:17px;margin-top:8px;}
   </style>
 </head>
 <body>
