--- a/dev.html
+++ b/dev.html
@@ -455,7 +455,7 @@
               agitation: 0,
               trauma: p.trauma * 0.25,
               fakeDead: false,
-              unkillableBlobzilla: Math.random() < 0.001,                                        // Split chance of becoming zilla (0.01 = 1 in 100)
+              // unkillableBlobzilla: Math.random() < 0.001,                                        // Split chance of becoming zilla (0.01 = 1 in 100)
               touching: new Set(),
               evil: isEvil,
               hp: r * 2,
