--- a/dev.html
+++ b/dev.html
@@ -438,7 +438,7 @@
           const pos = blob.position;
           const count = Math.random() < 0.4 ? 1 : 2;
           for (let j = 0; j < count; j++) {
-            const r = Math.max(6, parentR * (0.25 + Math.random() * 0.15));                         // 25‑40% size
+            const r = Math.max(6, parentR * (0.35 + Math.random() * 0.15));                         // 25‑40% size
             const isEvil = p.evil;
             const babyColor = isEvil ? redTint(r) : greenTint(r);
             const baby = Bodies.circle(pos.x + (Math.random() - 0.5) * 20, pos.y - 10, r, {
@@ -491,7 +491,7 @@
           p.agitation = 100;
           p.scared = true;
           p.trauma += speed * 0.5;
-          p.scaredUntil = now + 5000;
+          p.scaredUntil = now + 8000;
         } else {
           p.agitation = Math.max(0, p.agitation - 0.4);
           p.trauma = Math.max(0, p.trauma - 0.6);
@@ -514,8 +514,8 @@
           const sizeFactor = Math.min(blob.circleRadius / 40, 3); // 0‑3 range
 
           // Idle bunny hop
-          const idleChance = 0.02 / (1 + sizeFactor);            // less frequent when older
-          const idleJump   = -0.035 * (1 + 0.6 * sizeFactor);    // higher when older
+          const idleChance = 0.03 / (1 + sizeFactor);            // less frequent when older
+          const idleJump   = -0.035 * (1 );    // higher when older
           if (Math.random() < idleChance) {
             Body.applyForce(blob, blob.position, {
               x: (Math.random() - 0.5) * 0.01,
@@ -524,7 +524,16 @@
           }
 
           // Mouse‑directed hop (chase / flee)
-          const chaseChance = 0.25 / (1 + sizeFactor);
+          const chaseChance = 0.05 / (1 + sizeFactor);
+          if (dist < 600 && Math.random() < chaseChance) {      // responsive distance from cursor 
+            const baseJump  = -0.006 * (1 + 0.2 * sizeFactor);
+            const baseSpeed = 0.008 * (1 + 0.2 * sizeFactor);
+            const flee = p.scared;
+            Body.applyForce(blob, blob.position, {
+              x: (flee ? -dir.x : dir.x) * (flee ? baseSpeed * 2.5 : baseSpeed),
+              y: flee ? baseJump * 1.2 : baseJump
+            });
+          }
           
           // Enemy attraction — jump toward nearest opposing blob
           const enemies = blobs.filter(o => o !== blob && !o.personality.dead && o.personality.evil !== p.evil);
