--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button onclick="togglePortalGun()" id="portalToggle">Portal Gun: Off</button>
       <button onclick="toggleBeamMode()" id="beamToggle">Beam: Off</button>
       <button onclick="clearPortals()">Clear Portals</button>
-      <button onclick="clearBeams()">Clear Beams</button>
+     <!-- <button onclick="clearBeams()">Clear Beams</button> -->
       <button onclick="rotateSelected('left')">⟲ Rotate Left</button>
       <button onclick="rotateSelected('right')">⟳ Rotate Right</button>
     </div>
